Fixed img spacing and removed center class

--- a/src/styles/ItemPage.css
+++ b/src/styles/ItemPage.css
@@ -31,10 +31,6 @@
 
 .image-section {
   grid-area: image-section;
-  display: flex;
-  flex-direction: row-reverse;
-  justify-content: center;
-  align-items: flex-start;
 }
 
 .ingredient {
@@ -60,6 +56,7 @@
 
 .measurement {
   min-width: 5rem;
+  text-align: end;
 }
 
 /* temp styles */
